Item240: removing width styling on search fields to prevent scaling issues on Firefox
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP@8499 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -605,8 +605,6 @@ table.patternTopBarContents td {
 	width:16px;
 }
 .patternLeftBarContents input.patternFormField {
-	display:block;
-	width:100%;
 	border-width:1px;
 	border-style:solid;
 	font-size:85%; /*S3*/
